# CognitionFM

./: .gitignore  README.md  manifest.csv  pyproject.toml
.github/workflows/: ci.yml
cognitionfm/: __init__.py  art.py  chapters.py  cli.py  render.py  sessionlog.py  stream.py  video.py
cognitionfm/compose/: __init__.py  events.py  theory.py  voices.py
cognitionfm/dsp/: __init__.py  env.py  filters.py  mod.py  osc.py
cognitionfm/fx/: __init__.py  reverb.py  stereo.py
cognitionfm/master/: __init__.py  loudness.py  normalize.py
cognitionfm/recipes/: __init__.py  ambient_layers.py  pulse_layers.py
docs/: 01-evidence-review.md  02-playlists.md  03-testing-protocol.md  04-publishing-plan.md
recipes/: deep-work-analytical.yaml  deep-work-verbal.yaml  downshift.yaml  morning-ramp-up.yaml  sleep-wind-down.yaml
site/: build.py  make_previews.py  style.css
site/audio/: deep-work-analytical-seed42-90s.m4a  deep-work-verbal-seed42-90s.m4a  downshift-seed42-90s.m4a  morning-ramp-up-seed42-90s.m4a  sleep-wind-down-seed42-90s.m4a
tests/: test_dsp.py  test_loudness.py  test_pipeline.py  test_protocol_tools.py  test_render.py  test_reverb.py
